<resources>
    <string name="app_name">おおもじこもじ</string>
    <string name="question_num">%d</string>
    <string name="question_alphabet">%s</string>
    <string name="question_text">は %s でどれ？</string>
    <string name="question_word_text">%s</string>
    <string name="selection">%s</string>

    <string name="submit_text">こたえる！</string>
    <string name="result_title">けっかはっぴょう</string>
    <string name="result_score">%d</string>
    <string name="btn_try_again">もういっかい</string>
    <string name="five_question">5もんちゅう</string>
    <string name="text_name">%sちゃん</string>
    <string name="inputName">あなたのなまえをおしえてね</string>
    <string name="chooseCharacter">すきなキャラクターをえらんでね</string>
    <string name="gameImage">game_image</string>
    <string name="start">すたーと！</string>
    <string name="textFileName">quiz_data.txt</string>
    <string name="wordTextFileName">word_quiz_data.txt</string>

    <string name="incorrect_num_str">はずれ　%dもん</string>
    <string name="correct_num_str">せいかい　%dもん</string>
    <string name="name_hint">なまえをにゅうりょくしてね</string>
    <string name="str_correct_q_num">もんせいかい</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="answer_hint">ここににゅうりょくしてね</string>
    <string name="numberOfQuestion">だい</string>
    <string name="mon">もん</string>
    <string name="newGame">にゅーげーむ</string>
    <string name="one">いちもじ</string>
    <string name="oneWord">わーど</string>
    <string name="appTitle">あるふぁぺっと</string>
    <string name="title_activity_input_name">InputNameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alphabet_voice">alphabet voice</string>
    <string name="もどる">return</string>
    <string name="skipQuiz">skip</string>

</resources>