<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_bg"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/text_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kosugimaru"
        android:gravity="center_horizontal"
        android:text="@string/question_word_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kosugimaru"
        android:gravity="center_horizontal"
        android:text="@string/question_alphabet"
        android:textSize="60sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="15dp">

        <LinearLayout
            android:id="@+id/keyboardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textColor="#304FFE"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_name">

            <TextView
                android:id="@+id/mon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="だい" />

            <TextView
                android:id="@+id/quiz_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:height="50dp"
                android:background="@drawable/question_num_btn_bg"
                android:text="@string/question_num"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="もん" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question">

        <TextView
            android:id="@+id/correct_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/kosugimaru"
            android:text="@string/correct_num_str"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrong_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/kosugimaru"
            android:text="@string/incorrect_num_str"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



