<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/after_answered"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_judge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:background="@drawable/correct_btn_color"
            android:onClick="checkQuizCount"
            android:text="つぎへ"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/correct_btn_color"
        android:fontFamily="@font/kosugimaru"
        android:padding="10dp"
        android:text="@string/text_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name">

        <TextView
            android:id="@+id/mon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kosugimaru"
            android:text="だい"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quiz_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp"
            android:height="50dp"
            android:background="@drawable/question_num_btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/question_num"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kosugimaru"
            android:text="もん"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name">

        <TextView
            android:id="@+id/correct_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/kosugimaru"
            android:text="@string/correct_num_str"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wrong_answer_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/kosugimaru"
            android:text="@string/incorrect_num_str"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_bg"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/quiz_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/question_alphabet"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/question_word_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/answer_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif"
                android:hint="Input here!"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/quiz_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                app:srcCompat="@drawable/banana" />
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>